# AI-Manager-Python-SDK

./: LICENSE  README.md  pypirc.template  pyproject.toml  test.py
brandcompete/client/: __init__.py  _ai_man_client.py
brandcompete/core/: classes.py  credentials.py  util.py
