[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "AI-Manager-Python-SDK"
authors = [
  {name = "Thorsten Atzeni", email = "thorsten.atzeni@brandcompete.com"}
]
maintainers = [
  {name = "Thorsten Atzeni", email = "thorsten.atzeni@brandcompete.com"}
]
description = "Service client to communicate with AI Man-API"
version = "1.0.12"
license = {file = "LICENSE"}
requires-python = ">= 3.8"
dependencies = [
    'dataclasses-json==0.6.3',
    'pyjwt==2.8.0',
    'setuptools==69.1.0',
    'llama-index==0.10.14', 
    'pandas',
    'pypdf',
    'openpyxl',
    'docx2txt'
]
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent"
]
readme = "README.md"

[project.urls]
Homepage = "https://www.brandcompete.com"
Repository = "https://github.com/brandcompete/AI-Manager-Python-SDK"

[tool.setuptools.packages]
find = {} 
