[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "AI-Manager-Python-SDK"
authors = [
  {name = "Thorsten Atzeni", email = "thorsten.atzeni@brandcompete.com"}
]
maintainers = [
  {name = "Thorsten Atzeni", email = "thorsten.atzeni@brandcompete.com"}
]
description = "Service client to communicate with AI Man-API"
version = "1.0.15"
license = {file = "LICENSE"}
requires-python = ">= 3.8"
dependencies = [
    'dataclasses-json',
    'pyjwt',
    'setuptools',
    'llama-index', 
    'pandas',
    'pypdf',
    'openpyxl',
    'docx2txt'
]
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent"
]
readme = "README.md"

[project.urls]
Homepage = "https://www.brandcompete.com"
Repository = "https://github.com/brandcompete/AI-Manager-Python-SDK"

[tool.setuptools.packages]
find = {} 
