[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "AI-Manager-Python-SDK"
authors = [
  {name = "brandcompete GmbH", email = "info@brandcompete.com"}
]
maintainers = [
  {name = "Thorsten Atzeni", email = "thorsten.atzeni@brandcompete.com"},
  {name = "Dennis Hauser", email = "dennis.hauser@brandcompete.com"}
]
description = "Service client to communicate with AI Man-API"
version = "1.0.26"
license = {file = "LICENSE"}
requires-python = ">= 3.8"
dependencies = [
    'dataclasses-json',
    'pyjwt',
    'setuptools',
    'llama-index', 
    'pandas',
    'pypdf',
    'PyPDF2',
    'openpyxl',
    'docx2txt'
]
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent"
]
readme = "README.md"

[project.urls]
Homepage = "https://www.brandcompete.com"
Repository = "https://github.com/brandcompete/AI-Manager-Python-SDK"

[tool.setuptools.packages]
find = {} 
